[gd_scene load_steps=7 format=2]

[ext_resource path="res://Credits.gd" type="Script" id=1]
[ext_resource path="res://Fonts/ItemSpawn.tres" type="DynamicFont" id=2]
[ext_resource path="res://Fonts/CreditTitle.tres" type="DynamicFont" id=3]
[ext_resource path="res://PauseMenuBackground.png" type="Texture" id=4]
[ext_resource path="res://Music/Menu.mp3" type="AudioStream" id=5]
[ext_resource path="res://Fonts/MainMenu.tres" type="DynamicFont" id=6]

[node name="Credits" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = 100.0
margin_right = -100.0
margin_bottom = -100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 1240.0
margin_bottom = 701.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer3" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 357.0
margin_bottom = 701.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer3"]
margin_right = 357.0
margin_bottom = 90.0
custom_fonts/font = ExtResource( 6 )
text = "Back"

[node name="DisclaimerTitle" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer3"]
margin_top = 94.0
margin_right = 357.0
margin_bottom = 229.0
custom_fonts/font = ExtResource( 3 )
text = "
Disclaimer:"

[node name="Disclaimer" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer3"]
margin_top = 233.0
margin_right = 357.0
margin_bottom = 470.0
custom_fonts/font = ExtResource( 2 )
text = "Every resource in this game was either made by me or has a creative commons license, in that case it's creator is listed in this page. They have my gratitude!
"
align = 3
autowrap = true

[node name="SpecialThanksTitle" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer3"]
margin_top = 474.0
margin_right = 357.0
margin_bottom = 540.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.905882, 1, 0, 1 )
text = "Special Thanks:"

[node name="SpecialThanks" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer3"]
margin_top = 544.0
margin_right = 357.0
margin_bottom = 701.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.905882, 1, 0, 1 )
text = "This project was only possible with my wife's support, kaah, who inspired me to go after my dreams. Thank you my love <3"
align = 3
autowrap = true

[node name="BlankSpace" type="Label" parent="MarginContainer/HBoxContainer"]
margin_left = 361.0
margin_top = 343.0
margin_right = 517.0
margin_bottom = 357.0
text = "                                       "

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 521.0
margin_right = 878.0
margin_bottom = 701.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SoundsTitle" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
margin_right = 357.0
margin_bottom = 66.0
custom_fonts/font = ExtResource( 3 )
text = "Sound Effects:"

[node name="Sound1" type="LinkButton" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
margin_top = 70.0
margin_right = 357.0
margin_bottom = 107.0
focus_mode = 2
custom_fonts/font = ExtResource( 2 )
text = "- NenadSimic"
underline = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sound2" type="LinkButton" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
margin_top = 111.0
margin_right = 357.0
margin_bottom = 148.0
focus_mode = 2
custom_fonts/font = ExtResource( 2 )
text = "- Atlas72"
underline = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sound3" type="LinkButton" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
margin_top = 152.0
margin_right = 357.0
margin_bottom = 189.0
focus_mode = 2
custom_fonts/font = ExtResource( 2 )
text = "- deleted_user_2104797"
underline = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sound4" type="LinkButton" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
margin_top = 193.0
margin_right = 357.0
margin_bottom = 230.0
focus_mode = 2
custom_fonts/font = ExtResource( 2 )
text = "- Clusman"
underline = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sound5" type="LinkButton" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
margin_top = 234.0
margin_right = 357.0
margin_bottom = 271.0
focus_mode = 2
custom_fonts/font = ExtResource( 2 )
text = "- thisusernameis"
underline = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sound6" type="LinkButton" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
margin_top = 275.0
margin_right = 357.0
margin_bottom = 312.0
focus_mode = 2
custom_fonts/font = ExtResource( 2 )
text = "- TolerableDruid6"
underline = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sound7" type="LinkButton" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
margin_top = 316.0
margin_right = 357.0
margin_bottom = 353.0
focus_mode = 2
custom_fonts/font = ExtResource( 2 )
text = "- AugustSandberg"
underline = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sound8" type="LinkButton" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
margin_top = 357.0
margin_right = 357.0
margin_bottom = 394.0
focus_mode = 2
custom_fonts/font = ExtResource( 2 )
text = "- webmatex"
underline = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sound9" type="LinkButton" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
margin_top = 398.0
margin_right = 357.0
margin_bottom = 435.0
focus_mode = 2
custom_fonts/font = ExtResource( 2 )
text = "- SamsterBirdies"
underline = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sound10" type="LinkButton" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
margin_top = 439.0
margin_right = 357.0
margin_bottom = 476.0
focus_mode = 2
custom_fonts/font = ExtResource( 2 )
text = "- themusicalnomad"
underline = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sound11" type="LinkButton" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
margin_top = 480.0
margin_right = 357.0
margin_bottom = 517.0
focus_mode = 2
custom_fonts/font = ExtResource( 2 )
text = "- plasterbrain"
underline = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sound12" type="LinkButton" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
margin_top = 521.0
margin_right = 357.0
margin_bottom = 558.0
focus_mode = 2
custom_fonts/font = ExtResource( 2 )
text = "- yunikon"
underline = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sound13" type="LinkButton" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
margin_top = 562.0
margin_right = 357.0
margin_bottom = 599.0
focus_mode = 2
custom_fonts/font = ExtResource( 2 )
text = "- qubodup"
underline = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 882.0
margin_right = 1240.0
margin_bottom = 701.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TestersTitle" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
visible = false
margin_right = 357.0
margin_bottom = 66.0
custom_fonts/font = ExtResource( 3 )
text = "Testers:"

[node name="Testers" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
visible = false
margin_top = 70.0
margin_right = 357.0
margin_bottom = 187.0
custom_fonts/font = ExtResource( 2 )
text = "- Kaah
- Lee
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicTitle" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_right = 358.0
margin_bottom = 66.0
custom_fonts/font = ExtResource( 3 )
text = "Music:"

[node name="Music1" type="LinkButton" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 70.0
margin_right = 358.0
margin_bottom = 107.0
custom_fonts/font = ExtResource( 2 )
text = "- Flavio Concini"
underline = 1

[node name="Music2" type="LinkButton" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 111.0
margin_right = 358.0
margin_bottom = 148.0
custom_fonts/font = ExtResource( 2 )
text = "- Doctor Dreamchip"
underline = 1

[node name="Music3" type="LinkButton" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 152.0
margin_right = 358.0
margin_bottom = 189.0
focus_mode = 2
custom_fonts/font = ExtResource( 2 )
text = "- levelclearer"
underline = 1

[node name="BlankLine1" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 193.0
margin_right = 358.0
margin_bottom = 230.0
custom_fonts/font = ExtResource( 2 )

[node name="FontTitle" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 234.0
margin_right = 358.0
margin_bottom = 300.0
custom_fonts/font = ExtResource( 3 )
text = "Fonts:"

[node name="Font1" type="LinkButton" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 304.0
margin_right = 358.0
margin_bottom = 341.0
custom_fonts/font = ExtResource( 2 )
text = "- Joe Letter"
underline = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Font2" type="LinkButton" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 345.0
margin_right = 358.0
margin_bottom = 382.0
focus_mode = 2
custom_fonts/font = ExtResource( 2 )
text = "- Rogier Van Dalen"
underline = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0
autoplay = true

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer3/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer2/Sound1" to="." method="_on_Sound1_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer2/Sound2" to="." method="_on_Sound2_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer2/Sound3" to="." method="_on_Sound3_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer2/Sound4" to="." method="_on_Sound4_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer2/Sound5" to="." method="_on_Sound5_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer2/Sound6" to="." method="_on_Sound6_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer2/Sound7" to="." method="_on_Sound7_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer2/Sound8" to="." method="_on_Sound8_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer2/Sound9" to="." method="_on_Sound9_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer2/Sound10" to="." method="_on_Sound10_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer2/Sound11" to="." method="_on_Sound11_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer2/Sound12" to="." method="_on_Sound12_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer2/Sound13" to="." method="_on_Sound13_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Music1" to="." method="_on_Music1_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Music2" to="." method="_on_Music2_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Music3" to="." method="_on_Music3_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Font1" to="." method="_on_Font1_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Font2" to="." method="_on_Font2_pressed"]
